# planitv2

./: .cursorrules  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/agents/: competitive-analyst.md  db-performance-optimizer.md  premium-ui-designer.md  product-strategist.md  (+1 more)
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/dhg/: __init__.py  routes.py
backend/app/api/v1/enrollment/: __init__.py  routes.py
backend/app/api/v1/financials/: __init__.py  routes.py
backend/app/api/v1/workforce/: __init__.py  routes.py
backend/app/core/config/: __init__.py  settings.py
backend/app/core/security/: __init__.py
backend/app/db/: __init__.py
backend/app/domain/: __init__.py
backend/app/domain/dhg/: __init__.py
backend/app/domain/financials/: __init__.py
backend/app/domain/workforce/: __init__.py
backend/app/engine/: __init__.py
backend/app/engine/polars/: __init__.py
docs/: DATABASE_SCHEMA_V2.6.md  PRD-v5.2.md  VSCODE_EXTENSIONS.md
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
migrations/: 001_extensions.sql  002_foundation_tables.sql  003_user_management.sql  004_scenario_management.sql  005_grade_structure.sql  006_reference_data.sql  007_core_business_tables.sql  008_financial_module.sql  009_audit_configuration.sql  010_performance_indexes.sql  011_row_level_security.sql  012_seed_data.sql  README.md  run_all.sh
supabase/: config.toml  seed.sql
(+24 files in other folders)
